# wolfram-mcp-server

./: CLAUDE.md  llms-full.txt  mcp-ts-sdk.txt
wolfram-language-server/: .env.example  .gitignore  README.md  debug_wolfram.py  main.py  pyproject.toml  run_server.py  test_env.py  test_kernel_path.py  test_server.py  test_ubuntu_performance.py
wolfram-language-server/src/wolfram_language_server/: __init__.py  main.py  middleware.py  models.py  security.py  wolfram_client.py
wolfram-mcp-worker/: package.json  worker-configuration.d.ts  wrangler.jsonc
wolfram-mcp-worker/src/: auth.ts  index.ts  wolfram.ts  wolfram_backend.ts
